# bcplusparser

./: .gitignore  Makefile.am  bootstrap.sh  configure.ac
include/: config.h.in~
include/babb/utils/memory/: ref_ptr.h
include/bcplus/: Configuration.h  DomainType.h
include/bcplus/elements/: AtomicFormula.h  BindingFormula.h  CardinalityFormula.h  Element.h  Macro.h  QuantifierFormula.h  elements.h  formulas.h  terms.h
include/bcplus/elements/detail/: AnonymousElement.impl.h  BinaryElement.h  BinaryElement.impl.h  ElementClass.h  ElementClass.impl.h  IdentifierElement.h  IdentifierElement.impl.h  NullaryElement.impl.h  TermType.h  UnaryElement.h  UnaryElement.impl.h
include/bcplus/languages/: BCPlus.h  Language.h  MVASP.h
include/bcplus/parser/: BCParser.h  Token.h
include/bcplus/parser/detail/: Number.h  NumberRange.h  Scanner.h  ScannerBufferSource.h  ScannerFileSource.h  ScannerRawSource.h  ScannerSource.h  ScannerTokenSource.h  lemon_macro.h  lemon_parser.h
include/bcplus/statements/: IncludeStatement.h  Statement.h  blocks.h  laws.h
include/bcplus/statements/detail/: DynamicLawForm.h  DynamicLawForm.impl.h  DynamicValueLawForm.h  DynamicValueLawForm.impl.h  ListStatement.h  ListStatement.impl.h  ObjectBinding.h
include/bcplus/symbols/: AttributeSymbol.h  ConstantSymbol.h  MacroSymbol.h  NumberRangeSymbol.h  ObjectSymbol.h  Resolver.h  SortSymbol.h  Symbol.h  SymbolTable.h  VariableSymbol.h
include/bcplus/symbols/detail/: BaseSymbol.h
src/: Configuration.cpp  Configuration.h  Configuration.r2c  Configuration.re2c  Makefile.am  Makefile.rls  Parser.cpp  Parser.h  main.cpp  masp  pointers.h  referencedwrappers.h  utils.h
src/bcplus/: Configuration.cpp  Configuration.r2c
src/bcplus/elements/: AtomicFormula.cpp  BindingFormula.cpp  CardinalityFormula.cpp  Element.cpp  Macro.cpp  QuantifierFormula.cpp
src/bcplus/languages/: BC.cpp  BCPlus.cpp  CPlus.cpp  Language.cpp  MVASP.cpp  MVPF.cpp  OBCPlus.cpp
src/bcplus/parser/: BCParser.cpp  Token.cpp
src/bcplus/parser/detail/: MacroParser.cpp  Number.cpp  NumberRange.cpp  Scanner.1.cpp  Scanner.1.re2c  Scanner.2.cpp  Scanner.2.re2c  Scanner.3.cpp  Scanner.3.re2c  Scanner.cpp  Scanner.re2c  ScannerBufferSource.cpp  ScannerFileSource.cpp  ScannerRawSource.cpp  ScannerSource.cpp  ScannerTokenSource.cpp  grammar.txt  lemon_macro.cpp  lemon_macro.y  lemon_parser.cpp  lemon_parser.out  lemon_parser.y
src/bcplus/statements/: IncludeStatement.cpp  Statement.cpp
src/bcplus/statements/detail/: ObjectBinding.cpp
src/bcplus/symbols/: ConstantSymbol.cpp  ConstantSymbol.r2c  MacroSymbol.cpp  NumberRangeSymbol.cpp  ObjectSymbol.cpp  SortSymbol.cpp  Symbol.cpp  Symbol.r2c  SymbolTable.cpp  VariableSymbol.cpp
src/bcplus/symbols/detail/: BaseSymbol.cpp
src/lemon/: lempar.tem.c
src/parser/: Location.h  SymbolTable.cpp  SymbolTable.h  Token.h  elements.h
src/parser/detail/: Scanner.h  Scanner.re2c  ScannerBufferSource.cpp  ScannerBufferSource.h  ScannerFileSource.cpp  ScannerFileSource.h  ScannerSource.cpp  ScannerSource.h  atom_parser.c  atom_parser.h  atom_parser.out  atom_parser.y
src/parser/elements/: AtomicFormula.cpp  AtomicFormula.h  Element.cpp  Element.h  QuantifierFormula.cpp  QuantifierFormula.h  formulas.h  macros.h  terms.h
src/parser/elements/detail/: BinaryElement.h  BinaryElement.impl.h  ElementClass.h  ElementClass.impl.h  IdentifierElement.h  IdentifierElement.impl.h  UnaryElement.h  UnaryElement.impl.h
src/parser/symbols/: ConstantSymbol.cpp  ConstantSymbol.h  MacroSymbol.h  ObjectSymbol.cpp  ObjectSymbol.h  Resolver.h  SortSymbol.cpp  SortSymbol.h  Symbol.cpp  Symbol.h  Symbol.r2c  Symbol.re2c  VariableSymbol.cpp  VariableSymbol.h  a.out  ccsat.out
src/parser/symbols/detail/: BaseSymbol.cpp  BaseSymbol.h
